@@ -7,8 +7,6 @@ my $c = AnyEvent->condvar;
 
 my $pc = AnyEvent::IRC::Client->new;
 
-$pc->connect ("irc.plan9.de", 6667);
-
 $pc->reg_cb (
    irc_privmsg => sub {
       my ($self, $msg) = @_;
@@ -40,7 +38,10 @@ $pc->reg_cb (
 
 $pc->reg_cb (
    connect => sub {
-      $pc->register ("net_irc3", "net_irc3", "test bot");
+      my ($pc, $err) = @_;
+      if (defined $err) {
+         print "Couldn't connect to server: $err\n";
+      }
    },
    registered => sub {
       my ($self) = @_;
@@ -56,5 +57,9 @@ $pc->reg_cb (
 # is completly registered and has a valid nick etc.
 $pc->send_srv ("JOIN", "#test");
 $pc->send_chan ("#test", "PRIVMSG", "#test", "hi, i'm a bot!");
+
+$pc->connect (
+   "irc.plan9.de", 6667, { nick => 'net_irc3', user => 'net_irc3', real => 'test bot' }
+);
 
 $c->wait;
